--- a/source/less/container.less
+++ b/source/less/container.less
@@ -1,4 +1,5 @@
 .container {
+  min-width: 280px;
   width: 100%;
   box-sizing: border-box;
   margin-left: auto;
@@ -14,6 +15,7 @@
 
   .container-2 {
     padding-left: 70px;
+    padding-right: 65px;
   }
 }
 
@@ -21,9 +23,5 @@
   .container {
     padding: 0 40px;
     width: 1300px;
-  }
-
-  .container-2 {
-    padding: 0 40px;
   }
 }
