--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -1,4 +1,5 @@
 .live-example {
+  margin-top: 52px;
   background-color: #f2f2f2;
 }
 
@@ -6,10 +7,16 @@
   margin: 0;
   font-size: 36px;
   font-weight: 400;
-  padding-top: 25px;
+  padding-top: 20px;
+}
+
+.live-example__story {
+  padding-top: 10px;
+  width: 95%;
 }
 
 .live-example__story-text {
+  margin-top: 22px;
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
@@ -21,6 +28,7 @@
   font-size: 24px;
   font-weight: 400;
   text-align: center;
+  padding-top: 30px;
 }
 
 .live-example__statistics-field {
@@ -32,6 +40,9 @@
   max-width: 50%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 7px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .live-example__statistics-wrapper {
@@ -39,11 +50,12 @@
   border-radius: 3px;
   text-align: center;
   width: 45%;
-  padding-top: 10px;
+  padding-top: 11px;
+  flex-shrink: 0;
 }
 
 .live-example__statistics {
-  margin-bottom: -20px;
+  margin-bottom: -30px;
   width: 130px;
   margin-left: auto;
   margin-right: auto;
@@ -53,7 +65,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  margin-top: 27px;
+  margin-top: 25px;
 }
 
 .live-example__price {
@@ -61,7 +73,7 @@
   text-align: center;
   font-size: 14px;
   padding-bottom: 45px;
-  padding-top: 35px;
+  padding-top: 40px;
   text-transform: uppercase;
 }
 
@@ -72,7 +84,7 @@
 
   .live-example__title {
     font-size: 60px;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
   }
 
   .live-example__story-text {
@@ -102,7 +114,8 @@
 
   .live-example__story {
     margin-right: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 57px;
+    padding-top: 20px;
   }
 
   .live-example__statistics-container {
@@ -110,15 +123,19 @@
     max-width: 50%;
   }
 
+  .live-example__statistics-wrapper--weight {
+    margin-right: 45px;
+  }
+
   .live-example__statistics-layout {
     display: flex;
-    justify-content: space-between;
-    padding-bottom: 80px;
+    padding-bottom: 77px;
   }
 
   .live-example__price-container {
     width: 215px;
-    padding-top: 15px;
+    padding-top: 10px;
+    margin-left: auto;
   }
 
   .live-example__price {
@@ -134,16 +151,21 @@
   }
 
   .live-example__statistics {
-    margin-bottom: -25px;
+    margin-bottom: -35px;
   }
 
   .live-example__statistics-field {
-    max-width: 100%;
+    display: block;
+    min-width: 133px;
     font-size: 14px;
     line-height: 14px;
-    margin: 0;
-    margin-top: 10px;
     background-color: #ffffff;
+    padding: 0;
+    text-align: center;
+  }
+
+  .live-example__statistics-field--weight {
+    min-width: 119px;
   }
 
   .live-example__statistics-value {
@@ -151,8 +173,8 @@
   }
 
   .live-example__statistics-wrapper {
-    padding-top: 18px;
-    padding-bottom: 18px;
+    padding-top: 16px;
+    padding-bottom: 15px;
   }
 }
 
