--- a/source/less/selection.less
+++ b/source/less/selection.less
@@ -2,8 +2,8 @@
   font-size: 36px;
   font-weight: 400;
   margin: 0;
-  padding-top: 20px;
-  padding-bottom: 25px;
+  padding-top: 18px;
+  padding-bottom: 27px;
 }
 
 .selection__tagline {
@@ -11,14 +11,15 @@
   font-size: 14px;
   margin: 0;
   line-height: 18px;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
+  width: 90%;
 }
 
 @media (min-width: 768px) {
   .selection__title {
     font-size: 60px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 33px;
+    padding-bottom: 57px;
   }
 
   .selection__tagline {
