--- a/source/less/choice.less
+++ b/source/less/choice.less
@@ -5,6 +5,7 @@
 }
 
 .choice__column--diets {
+  margin-top: 5px;
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
 }
@@ -23,8 +24,8 @@
   margin-bottom: 14px;
 }
 
-.choice__column--comment {
-  padding-right: 35px;
+.choice__column-area--phone {
+  margin-bottom: 0;
 }
 
 .choice__column-field {
@@ -35,7 +36,7 @@
   width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 15px;
+  padding-left: 10px;
   border: solid 1px rgba(205, 205, 205, 0.5);
   resize: none;
 
@@ -52,12 +53,77 @@
   }
 }
 
+.choice__column-field--story {
+  padding-left: 14px;
+  padding-right: 13px;
+  padding-bottom: 18px;
+}
+
+.choice__column-title-layout {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: #68b738;
+    width: 100%;
+    left: 0;
+    top: 25%;
+    transform: translate(0, -50%);
+    z-index: 1;
+  }
+}
+
+.choice__column-title {
+  font-size: 24px;
+  font-weight: 400;
+  padding-bottom: 13px;
+  padding-top: 8px;
+  line-height: 24px;
+}
+
+.choice__column-title--additionally {
+  padding-top: 5px;
+}
+
+.choice__column-title-layout--contacts span {
+  width: 185px;
+}
+
+.choice__column-title-layout span {
+  display: inline-block;
+  position: relative;
+  z-index: 2;
+  background-color: #ffffff;
+  padding-right: 24px;
+
+  &::before {
+    content: "";
+    width: 24px;
+    height: 100%;
+    position: absolute;
+    left: -24px;
+    background-color: #ffffff;
+  }
+}
+
+.choice__column-title-layout--comment::before,
+.choice__column-title-layout--additionally::before {
+  top: 55%;
+}
+
 .choice__column-field:focus:invalid ~ .choice__column-image {
   fill: #ff8282;
 }
 
 .choice__column-field:focus ~ .choice__column-image {
   fill: #68b738;
+}
+
+.choice__column-field--info {
+  padding-top: 9px;
+  padding-left: 15px;
 }
 
 .choice__column-form {
@@ -70,25 +136,21 @@
 }
 
 .choice__column-filter {
+  margin-top: 28px;
   list-style: none;
-  padding-inline-start: 75px;
+  padding-left: 47px;
+  margin-bottom: 26px;
 }
 
 .choice__column-checks {
   list-style: none;
-  padding-inline-start: 42px;
-}
-
-.choice__column-title {
-  font-size: 24px;
-  font-weight: 400;
-  margin: 0;
-  padding-bottom: 30px;
-  padding-top: 30px;
+  padding-left: 0;
+  margin-top: 23px;
+  margin-bottom: 37px;
 }
 
 .choice__column-item {
-  margin-bottom: 25px;
+  margin-bottom: 18px;
 }
 
 .choice__column-radio + label::before,
@@ -119,33 +181,37 @@
   background-clip: content-box;
 }
 
-.choice__column-checkbox + label::before,
-.choice__column-checkbox:checked + label::before {
+.choice__column-checkbox:checked ~ .choice__column-form::before {
+  content: "";
+  position: absolute;
+  left: -38px;
+  top: 30%;
+  width: 10px;
+  height: 19px;
+  border-right: 2px solid #68b738;
+  border-bottom: 2px solid #68b738;
+  transform: translateY(-55%) rotate(42deg);
+}
+
+.choice__column-checkbox + label::after,
+.choice__column-checkbox:checked + label::after {
   content: "";
   position: absolute;
   display: block;
   top: -5px;
-  left: -50px;
+  left: -48px;
   width: 30px;
   height: 30px;
   border: 1px solid #cdcdcd;
 }
 
-.choice__column-checkbox:hover + label::before,
-.choice__column-checkbox:hover:checked + label::before {
+.choice__column-checkbox:hover + label::after,
+.choice__column-checkbox:hover:checked + label::after {
   border: 1px solid #bababa;
 }
 
-.choice__column-checkbox:checked ~ .choice__column-form--checkbox::before {
-  background-color: #68b738;
-  mask-image: url("../img/icon-tick.svg");
-  mask-position: center;
-  mask-repeat: no-repeat;
-  mask-size: 25px;
-}
-
 .choice__column-form--checkbox {
-  margin-left: 10px;
+  margin-left: 47px;
 }
 
 .choice__column-important {
@@ -161,16 +227,29 @@
 }
 
 .choice__column-image--phone {
-  right: 35px;
+  right: 31px;
 }
 
 .choice__column-image--email {
-  right: 40px;
+  right: 35px;
+}
+
+.choice__column-item--radio {
+  margin-bottom: 18px;
 }
 
 @media (min-width: 768px) {
+  .choice__column-title-layout--contacts span {
+    width: 520px;
+  }
+
   .choice__column-text {
     font-size: 20px;
+  }
+
+  .choice__column-title--contacts {
+    margin-top: 0;
+    margin-bottom: 15px;
   }
 
   .choice__column-form {
@@ -179,7 +258,7 @@
   }
 
   .choice__column--profile {
-    padding-bottom: 60px;
+    padding-bottom: 33px;
   }
 
   .choice__column-field {
@@ -192,20 +271,25 @@
     padding-bottom: 70px;
   }
 
+  .choice__column-field--story {
+    padding-bottom: 43px;
+  }
+
   .choice__column-image--phone {
-    right: 50px;
+    right: 80px;
   }
 
   .choice__column-image--email {
-    right: 55px;
+    right: 85px;
   }
 
   .choice__column--diets {
     margin-bottom: 70px;
-    border-left: 1px solid #e6e6e6;
-    border-right: 1px solid #e6e6e6;
-    width: 90%;
-    margin-left: 65px;
+    border: 0;
+  }
+
+  .choice__column-data--radio {
+    border: 1px solid #e6e6e6;
   }
 
   .choice__column-filter {
@@ -225,13 +309,19 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 20px;
   }
 
-  .choice__column-checkbox + label::before,
-  .choice__column-checkbox:checked + label::before {
+  .choice__column-checkbox + label::after,
+  .choice__column-checkbox:checked + label::after {
     width: 40px;
     height: 40px;
     left: -65px;
+  }
+
+  .choice__column-checkbox:checked ~ .choice__column-form::before {
+    left: -50px;
+    top: 50%;
   }
 
   .choice__column-item {
@@ -240,7 +330,7 @@
   }
 
   .choice__column-form--checkbox {
-    margin-left: 25px;
+    margin-left: 45px;
   }
 
   .choice__column--submit {
@@ -259,6 +349,36 @@
   .choice__column-item--checkbox {
     margin-bottom: 45px;
   }
+
+  .choice__column-title-layout--comment::before {
+    top: 28%;
+  }
+
+  .choice__column-title-layout--additionally::before {
+    top: 43%;
+  }
+
+  .choice__column-title--comment {
+    margin-bottom: 14px;
+  }
+
+  .choice__column-title--additionally {
+    padding-top: 40px;
+    margin-bottom: 0;
+    padding-bottom: 50px;
+  }
+
+  .choice__column-area {
+    margin-bottom: 32px;
+  }
+
+  .choice__column-item--radio {
+    margin-bottom: 33px;
+  }
+
+  .choice__column-checks-layout {
+    padding-left: 90px;
+  }
 }
 
 @media (min-width: 1300px) {
@@ -271,6 +391,11 @@
     box-sizing: border-box;
   }
 
+  .choice__column-field--email,
+  .choice__column-field--phone {
+    width: 464px;
+  }
+
   .choice__column--profile {
     padding: 0;
     margin: 0;
@@ -278,7 +403,6 @@
 
   .choice__column--contacts {
     margin-top: 70px;
-    width: 1300px;
   }
 
   .choice__column-image {
@@ -289,7 +413,8 @@
 
   .choice__column--diets {
     margin-left: 0;
-    width: 570px;
+    padding: 0;
+    padding-left: 80px;
   }
 
   .choice__columns-layout {
@@ -297,12 +422,21 @@
   }
 
   .choice__column-item--checkbox {
-    max-width: 160px;
+    max-width: 180px;
   }
 
   .choice__column-area {
     margin-bottom: 20px;
-    width: 570px;
+  }
+
+  .choice__column-title-layout span {
+    padding-left: 0;
+
+    &::before {
+      display: block;
+      width: 38px;
+      left: -38px;
+    }
   }
 
   .choice__column-title--contacts {
@@ -310,7 +444,6 @@
   }
 
   .choice__column-area--email {
-    width: 585px;
     margin-right: 80px;
   }
 
@@ -326,5 +459,14 @@
 
   .choice__column--submit {
     margin-bottom: 80px;
+  }
+
+
+  .choice__column-title-layout--contacts::before {
+    top: 20%;
+  }
+
+  .choice__column-item--radio {
+    min-width: 100%;
   }
 }
