--- a/source/less/description.less
+++ b/source/less/description.less
@@ -1,7 +1,6 @@
 .description {
   font-family: "Arial", sans-serif;
   font-size: 12px;
-  margin-bottom: 23px;
   color: #444444;
   width: 100%;
 }
@@ -9,12 +8,13 @@
 
 .description__value {
   text-align: right;
-  padding-left: 64px;
 }
 
 @media (min-width: 768px) {
   .description {
     margin: 0;
+    margin-top: 15px;
+    margin-bottom: 25px;
     font-size: 16px;
     border-collapse: collapse;
   }
