--- a/source/less/introduction.less
+++ b/source/less/introduction.less
@@ -1,5 +1,6 @@
 .introduction__wrapper {
-  background-image: linear-gradient(to top, #ffffff 130px, transparent 50px), url("/img/index-background-mobile@1x.jpg");
+  margin-top: 10px;
+  background-image: linear-gradient(to top, #ffffff 135px, transparent 50px), url("/img/index-background-mobile@1x.jpg");
   background-color: #5eaa2f;
   background-repeat: no-repeat;
   background-position: center top;
@@ -17,9 +18,13 @@
   line-height: 36px;
 }
 
+.introduction__link-wrapper {
+  margin-top: 3px;
+}
+
 .introduction__tagline {
   margin: 0;
-  padding-top: 19px;
+  padding-top: 25px;
   font-size: 14px;
   text-transform: uppercase;
   padding-bottom: 30px;
@@ -35,20 +40,21 @@
   }
 
   .introduction__title {
-    width: 420px;
+    width: 70%;
+    flex: 0 0 50%;
     line-height: 60px;
     color: #111111;
     text-align: left;
     font-size: 60px;
-    padding-left: 105px;
+    padding-left: 90px;
   }
 
   .introduction__tagline {
     text-align: left;
     color: #111111;
     font-size: 20px;
-    padding-left: 105px;
-    padding-top: 48px;
+    padding-left: 90px;
+    padding-top: 40px;
   }
 }
 
