--- a/source/less/main-navigation.less
+++ b/source/less/main-navigation.less
@@ -1,7 +1,3 @@
-.main-navigation__logo {
-  padding-left: 20px;
-}
-
 .main-navigation__logo-image:hover {
   opacity: 0.8;
 }
@@ -12,44 +8,50 @@
 
 .main-navigation__wrapper {
   padding: 0;
+}
+
+.main-navigation__wrapper--border {
   border-bottom: 1px solid #e6e6e6;
+  padding-bottom: 12px;
 }
 
 .main-navigation__block {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  top: 50%;
   flex-wrap: wrap;
   padding-top: 11px;
 }
 
+.main-navigation__layout {
+  width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+  justify-content: space-between;
+}
+
+.main-navigation__toggle-container {
+  padding-top: 10px;
+}
+
 .main-navigation__toggle {
-  position: absolute;
-  right: 30px;
-  top: 20px;
-  cursor: pointer;
-  border: 0;
+  width: 25px;
+  height: 19px;
+  align-self: center;
   background-color: transparent;
-  font-size: 0;
+  background-image: url("../img/icon-mobile-menu.svg");
+  background-repeat: no-repeat;
+  border: 0;
+  cursor: pointer;
+}
 
-  &::before {
-    content: "";
-    position: absolute;
-    width: 25px;
-    height: 19px;
-    background-image: url("../img/icon-mobile-menu.svg");
-    background-repeat: no-repeat;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 25px;
-    height: 19px;
-    background-image: url("../img/icon-close.svg");
-    background-repeat: no-repeat;
-    display: none;
-  }
+.main-navigation__toggle--open {
+  width: 25px;
+  height: 19px;
+  background-image: url("../img/icon-close.svg");
+  background-repeat: no-repeat;
 }
 
 .main-navigation__toggle:focus {
@@ -100,12 +102,24 @@
 @media (min-width: 768px) {
   .main-navigation__logo {
     padding: 0;
-    padding-top: 30px;
+    padding-top: 25px;
+  }
+
+  .main-navigation__layout {
+    margin: 0;
+    padding: 0;
+    width: inherit;
+    margin-right: 6%;
   }
 
   .main-navigation__wrapper {
-    border-bottom: none;
     padding: 0 30px;
+    justify-content: space-between;
+    box-sizing: border-box;
+  }
+
+  .main-navigation__wrapper--border {
+    border-bottom: none;
   }
 
   .main-navigation__block {
@@ -118,12 +132,12 @@
     width: inherit;
     display: flex;
     margin: 0;
-    padding-top: 30px;
+    padding-top: 22px;
     flex-shrink: 0;
   }
 
   .main-navigation__item {
-    margin-left: 37px;
+    margin-left: 35px;
   }
 
   .main-navigation__link {
@@ -133,7 +147,7 @@
     font-weight: 400;
     font-style: normal;
     line-height: 25px;
-    padding-bottom: 10px;
+    padding-bottom: 8px;
     border-top: none;
   }
 
@@ -152,11 +166,16 @@
     padding-top: 53px;
   }
 
+  .main-navigation__wrapper {
+    padding: 0;
+  }
+
   .main-navigation__list {
     z-index: 5;
     padding-top: 40px;
     list-style: none;
     color: #111111;
+    margin-left: auto;
   }
 
   .main-navigation__link--white {
@@ -177,5 +196,12 @@
 
   .main-navigation__link--green {
     border-bottom: 2px solid #68b738;
+  }
+
+  .main-navigation__block {
+    padding: 0 40px;
+    max-width: 1300px;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
 }
