--- a/source/less/toggle.less
+++ b/source/less/toggle.less
@@ -8,7 +8,7 @@
 
 .toggle__items {
   width: 100%;
-  padding-bottom: 30px;
+  padding-bottom: 22px;
 }
 
 .toggle__item-image {
@@ -20,7 +20,8 @@
 .toggle__scale-container {
   display: flex;
   justify-content: center;
-  padding-bottom: 38px;
+  padding-bottom: 35px;
+  align-items: center;
 }
 
 .toggle__input--before:checked {
@@ -44,7 +45,10 @@
   position: relative;
   display: block;
   width: 84px;
-  margin: 3px 18px;
+  margin-top: 2px;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 2px;
 }
 
 .toggle__scale-range--left {
@@ -53,7 +57,7 @@
   left: 5px;
   width: 35px;
   height: 6px;
-  margin-top: -4px;
+  margin-top: -3px;
   padding: 0;
   background-color: #68b738;
   border: 0;
@@ -66,7 +70,7 @@
   left: 43px;
   width: 35px;
   height: 6px;
-  margin-top: -4px;
+  margin-top: -3px;
   padding: 0;
   background-color: #68b738;
   border: 0;
@@ -111,6 +115,8 @@
 
   .toggle__scale-wrapper {
     width: 428px;
+    margin-left: 22px;
+    margin-right: 22px;
   }
 
   .toggle__label {
@@ -178,7 +184,7 @@
     overflow: hidden;
     top: 0;
     left: 0;
-    background: linear-gradient(to bottom, #ffffff, #ffffff 180px, #f2f2f2 170px, #f2f2f2);
+    background: linear-gradient(to bottom, #ffffff, #ffffff 178px, #f2f2f2 170px, #f2f2f2);
   }
 
   .toggle__item--after {
@@ -204,6 +210,11 @@
 
   .toggle__scale-container {
     padding-bottom: 70px;
+    align-items: flex-start;
+  }
+
+  .toggle__items {
+    padding-bottom: 33px;
   }
 }
 
