--- a/source/less/blocks/product-card.less
+++ b/source/less/blocks/product-card.less
@@ -30,6 +30,10 @@
   box-sizing: border-box;
 }
 
+.product-card__link {
+  text-decoration: none;
+}
+
 .product-card__title {
   width: 100%;
   box-sizing: border-box;
